# opencl-example

./: CMakeLists.txt
src/: main.cpp
